<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@color/white_normal"
    android:fitsSystemWindows="true"
    android:clickable="true"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="56.0dip">

        <ImageView
            android:layout_gravity="center_vertical"
            android:id="@+id/imgv_back_left_verifyphone"
            android:layout_width="44.0dip"
            android:layout_height="44.0dip"
            android:src="@drawable/icon_left_back_arrow" />

        <TextView
            android:textColor="@color/main_text"
            android:ellipsize="end" android:layout_gravity="center"
            android:text="@string/log_into_holala"
            android:maxLines="1"
            android:layout_marginStart="60.0dip"
            android:layout_marginEnd="60.0dip"
            app:fontFamily="@font/avenir_next_bold"
            style="@style/TitleBarContentTextStyle" />

    </FrameLayout>

    <View style="@style/AppTheme.SingleHorizontalLineStyle" />

    <TextView
        android:textSize="24.0sp"
        android:textColor="@color/main_text"
        android:id="@+id/tv_enter_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32.0dip"
        android:layout_marginBottom="24.0dip"
        android:text="@string/login_enter_code"
        android:fontFamily="@font/avenir_next_bold"
        android:layout_marginStart="36.0dip"
        android:layout_marginEnd="36.0dip" />

    <com.jkb.vcedittext.VerificationCodeEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36.0dip"
        android:layout_marginEnd="36.0dip"
        android:inputType="number"
        android:textColor="@color/main_text"
        android:textSize="30sp"
        android:padding="0dp"
        app:bottomLineHeight="2dp"
        app:cursorColor="@color/main_text"
        android:textColorHint="@color/main_text"
        android:id="@+id/codeview"
        app:selectedBackgroundColor="@color/white_normal"
        app:figures="6"
        android:fontFamily="@font/avenir_next_medium"
        app:verCodeMargin="10dp" />



    <TextView
        android:textSize="16.0sp"
        android:textColor="@color/white_normal"
        android:gravity="center"
        android:id="@+id/tv_verify_code"
        android:background="@drawable/shape_corner_btnlogin_next_sendcode_red"
        android:layout_width="fill_parent"
        android:layout_height="44.0dip"
        android:layout_marginTop="48.0dip"
        android:text="@string/next_verify"
        android:alpha="0.5"
        android:layout_marginStart="36.0dip"
        android:layout_marginEnd="36.0dip" />

    <TextView
        android:textSize="16.0sp"
        android:textColor="@color/red_ff5346"
        android:gravity="center_horizontal"
        android:id="@+id/tv_resend_code"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20.0dip"
        android:text="@string/login_input_resent"
        android:alpha="0.5"
        android:visibility="invisible"
        android:fontFamily="@font/avenir_next_demibold" />

    <TextView
        android:textSize="12.0sp"
        android:textColor="@color/gray_c6bfbd"
        android:gravity="center_horizontal"
        android:id="@+id/tv_sms_des_verify"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36.0dip"
        android:layout_marginTop="34.0dip"
        android:layout_marginRight="36.0dip"
        android:text="@string/login_statement_sms" />

</LinearLayout>