<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.Login.PhoneActivity">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="56.0dip">

        <ImageView
            android:layout_gravity="center_vertical"
            android:id="@+id/iv_back_left_phone"
            android:layout_width="44.0dip"
            android:layout_height="44.0dip"
            android:src="@drawable/icon_left_back_arrow" />

        <TextView
            android:textColor="@color/main_text"
            android:ellipsize="end" android:layout_gravity="center"
            android:text="@string/log_into_holala"
            android:maxLines="1"
            android:layout_marginStart="60.0dip"
            android:layout_marginEnd="60.0dip"
            app:fontFamily="@font/avenir_next_bold"
            style="@style/TitleBarContentTextStyle" />

    </FrameLayout>

    <View style="@style/AppTheme.SingleHorizontalLineStyle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:textSize="24.0sp"
            android:textColor="@color/main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32.0dip"
            android:layout_marginBottom="10.0dip"
            android:text="@string/login_enter_mobile"
            android:fontFamily="@font/avenir_next_bold"
            android:layout_marginStart="36.0dip"
            android:layout_marginEnd="36.0dip" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="36dp"
            android:layout_marginStart="36dp"
            >


            <com.hbb20.CountryCodePicker
                android:id="@+id/ccpPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFullName="false"
                app:ccp_showNameCode="false"
                app:ccp_flagBorderColor="@color/black_normal"
                app:ccp_showPhoneCode="true"
                app:ccp_contentColor="@color/black_normal"
                app:ccp_textSize="18sp"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_mobile_number"
                android:textColorHint="@color/black_3d000000"
                android:paddingBottom="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                android:textColor="@color/main_text"
                android:id="@+id/edtPhonenumber"
                android:textSize="22sp"
                android:inputType="phone"
                android:fontFamily="@font/avenir_next_medium"
                android:lines="1"
                />

        </LinearLayout>

        <TextView
            android:textSize="16.0sp"
            android:textColor="@color/white_normal"
            android:gravity="center"
            android:id="@+id/tvSendSMSCode"
            android:background="@drawable/shape_corner_btnlogin_next_sendcode_red"
            android:layout_width="fill_parent"
            android:layout_height="44.0dip"
            android:layout_marginTop="48.0dip"
            android:text="@string/send_sms_code"
            android:alpha="0.5"
            android:layout_marginStart="36.0dip"
            android:layout_marginEnd="36.0dip" />

        <TextView
            android:textSize="12.0sp"
            android:textColor="@color/gray_c6bfbd"
            android:gravity="center_horizontal"
            android:id="@+id/tv_sms_des_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="36.0dip"
            android:layout_marginTop="34.0dip"
            android:layout_marginRight="36.0dip"
            android:text="@string/login_statement_sms" />

    </LinearLayout>

</LinearLayout>